feat:Pagina gato con botas

--- a/dllo-web-test/actividad-1/style.css
+++ b/dllo-web-test/actividad-1/style.css
@@ -1,3 +1,10 @@
 .container{
     margin: 5rem 10% 5rem;
 }
+.image{
+    border-radius: 30rem;
+    
+}
+.left{
+   background: linear-gradient();
+}
