--- a/dllo-web-test/actividad-1/style.css
+++ b/dllo-web-test/actividad-1/style.css
@@ -1,7 +1,28 @@
 .splited{
     display: flex;
     margin: 1rem;
+    align-items: center;
+    width: 75%;
 }
 .text{
     margin: 1rem;
+}
+hr{
+    width: 75%;
+    background: black;
+}
+body{
+  margin: 0;   
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+}
+.videos{
+    width: 75%;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    background: linear-gradient(to right, #2e56af,rgb(144,96,60),rgb(247,233,181));
 }
